fixed notebookcard and text area alignment

--- a/frontend/src/components/Notebooks/NoteBookCard.module.css
+++ b/frontend/src/components/Notebooks/NoteBookCard.module.css
@@ -4,4 +4,5 @@
   flex-direction: column;
 }
 .noteCardWrapper {
+  padding-bottom: 10px;
 }
